--- a/web_avatar_chat/templates/index.html
+++ b/web_avatar_chat/templates/index.html
@@ -199,8 +199,8 @@
         <div class="absolute inset-0 z-0 overflow-hidden">
             <iframe id="pixelStreamIframeMobile"
                     src="https://avatar.aura42.de/"
-                    class="w-full h-full border-0 bg-bg-primary scale-150 origin-center"
-                    style="min-width: 120%; min-height: 120%; margin-left: -10%; margin-top: -10%;">
+                    class="border-0 bg-bg-primary"
+                    style="">
             </iframe>
         </div>
 
