--- a/web_avatar_chat/templates/index.html
+++ b/web_avatar_chat/templates/index.html
@@ -91,10 +91,10 @@
         @media (max-width: 1024px) {
             iframe {
                 position: fixed !important;
-                top: 0 !important;
-                left: 0 !important;
-                width: 100vw !important;
-                height: 100vh !important;
+                top: -100vh !important;
+                left: 12vw !important;
+                width: 75vw 622.5px !important;
+                height: 89vh !important;
                 transform: scale(4.5) !important;
                 transform-origin: center 20% !important;
                 z-index: 0 !important;
