--- a/web_avatar_chat/templates/index.html
+++ b/web_avatar_chat/templates/index.html
@@ -386,5 +386,9 @@
     <div class="backend-status fixed top-2 right-2 bg-black/80 text-white px-3 py-1 rounded-lg text-xs z-50">
         🔴 Backend wird verbunden...
     </div>
+
+    <!-- Emotion Detection -->
+    <script src="/static/js/emotion_detection.js"></script>
+
 </body>
 </html>
